  4. Socials update
  5. New Deviations features: mob power levels, sorting
  6. New Deviations button in the MUDGrinder map and room editors
  7. New Chants: Summon Squall
  8. Looking UP into a generated sky now gives some basic info.
  9. New Exit type: Skyway -- for supporting the above.
 10. New Achievement type: CHARITY
 11. New Disable flag: FATIGUE
 12. New clan skill: Await Clan Ship
 13. The "Know Plants" skill will now report on edible-ness.
 14. Some divination spells are now more mob-follower-friendly. (e.g. Find Directions)
 15. New Spell "Majesty", the effects of which can only be wished for.

# Build 5.10.1 Release 1/01/2023
  1. FasterRecovery expanded and new char stat REJUVRATE for Prop*Adjuster
  2. Ability Components now support their own private socials list.
  3. Deity and Component rituals and triggers now have their own MUDGrinder editor.
  4. PLAYERDEATH now supports PURGE X for a "lives remaining" type effect.
  5. New chant: Summon Animals
  6. Stat and train costs can now be specified in terms of a local currency
  7. WHERE Archon command now supports MQL updates via WHERE UPDATE: ...
  8. Disease_Vampirism greatly expanded, and its features argument-controllable
  9. New INI entry DEFAULTABILITYARGS for setting default property/skill arguments.
 10. LOGOUTMASK now supports a tick argument for how long to keep the mob in game.
 11. Decorating is now recipe driven, and has numerous new options
 12. Commands now support copying other player settings: 
     CONFIG COPY [playername] /CHANNELS COPY [playername]/COLORSET COPY [playername]
 13. New archon LIST option: Orphans, for rooms without incoming exits
 14. MODIFY command supports MQL with MODIFY UPDATE:...
 15. DESTROY command supports MQL with DESTROY DELETE: from ...
 16. Clan Government role 'CLAN_MOTD' changed to 'READ_MOTD'. 'CREATE_MOTD' added.
 17. New Zappermask: +-CLANLEVEL, for filtering a members clan's level
 18. New Bombs: Bomb_SpellBlast