@@ -132,7 +132,6 @@
         <ABILITY ID="Spell_CEqCold" PROFF=0 LEVEL=4 QUALIFYONLY=true />
         <ABILITY ID="Spell_ClanHome" PROFF=100 LEVEL=3 QUALIFYONLY=false />
         <ABILITY ID="Spell_ClanWard" PROFF=0 LEVEL=5 QUALIFYONLY=true />
-        <ABILITY ID="Spell_AwaitClanShip" PROFF=50 LEVEL=10 QUALIFYONLY=true />
         <ABILITY ID="Spell_ImprovedClanWard" PROFF=0 LEVEL=20 QUALIFYONLY=true />
     </ABILITIES>
     <EFFECTS>
@@ -299,7 +298,6 @@
         <ABILITY ID="Spell_CEqCold" PROFF=0 LEVEL=4 QUALIFYONLY=true />
         <ABILITY ID="Spell_ClanHome" PROFF=100 LEVEL=3 QUALIFYONLY=false />
         <ABILITY ID="Spell_ClanWard" PROFF=0 LEVEL=5 QUALIFYONLY=true />
-        <ABILITY ID="Spell_AwaitClanShip" PROFF=50 LEVEL=10 QUALIFYONLY=true />
         <ABILITY ID="Spell_ImprovedClanWard" PROFF=0 LEVEL=20 QUALIFYONLY=true />
     </ABILITIES>
     <EFFECTS>
@@ -456,7 +454,6 @@
         <ABILITY ID="Spell_CEqCold" PROFF=0 LEVEL=4 QUALIFYONLY=true />
         <ABILITY ID="Spell_ClanHome" PROFF=100 LEVEL=3 QUALIFYONLY=false />
         <ABILITY ID="Spell_ClanWard" PROFF=0 LEVEL=5 QUALIFYONLY=true />
-        <ABILITY ID="Spell_AwaitClanShip" PROFF=50 LEVEL=10 QUALIFYONLY=true />
         <ABILITY ID="Spell_ImprovedClanWard" PROFF=0 LEVEL=20 QUALIFYONLY=true />
     </ABILITIES>
     <EFFECTS>
@@ -620,7 +617,6 @@
         <ABILITY ID="Spell_CEqCold" PROFF=0 LEVEL=4 QUALIFYONLY=true />
         <ABILITY ID="Spell_ClanHome" PROFF=100 LEVEL=3 QUALIFYONLY=false />
         <ABILITY ID="Spell_ClanWard" PROFF=0 LEVEL=5 QUALIFYONLY=true />
-        <ABILITY ID="Spell_AwaitClanShip" PROFF=50 LEVEL=10 QUALIFYONLY=true />
         <ABILITY ID="Spell_ImprovedClanWard" PROFF=0 LEVEL=20 QUALIFYONLY=true />
     </ABILITIES>
     <EFFECTS>
@@ -785,7 +781,6 @@
         <ABILITY ID="Spell_CEqCold" PROFF=0 LEVEL=4 QUALIFYONLY=true />
         <ABILITY ID="Spell_ClanHome" PROFF=100 LEVEL=3 QUALIFYONLY=false />
         <ABILITY ID="Spell_ClanWard" PROFF=0 LEVEL=5 QUALIFYONLY=true />
-        <ABILITY ID="Spell_AwaitClanShip" PROFF=50 LEVEL=10 QUALIFYONLY=true />
         <ABILITY ID="Spell_ImprovedClanWard" PROFF=0 LEVEL=20 QUALIFYONLY=true />
     </ABILITIES>
     <EFFECTS>
@@ -981,7 +976,6 @@
         <ABILITY ID="Spell_CEqCold" PROFF=0 LEVEL=4 QUALIFYONLY=true />
         <ABILITY ID="Spell_ClanHome" PROFF=100 LEVEL=3 QUALIFYONLY=false />
         <ABILITY ID="Spell_ClanWard" PROFF=0 LEVEL=5 QUALIFYONLY=true />
-        <ABILITY ID="Spell_AwaitClanShip" PROFF=50 LEVEL=10 QUALIFYONLY=true />
         <ABILITY ID="Spell_ImprovedClanWard" PROFF=0 LEVEL=20 QUALIFYONLY=true />
     </ABILITIES>
     <EFFECTS>
@@ -1066,7 +1060,6 @@
         <ABILITY ID="Spell_CEqCold" PROFF=0 LEVEL=4 QUALIFYONLY=true />
         <ABILITY ID="Spell_ClanHome" PROFF=100 LEVEL=3 QUALIFYONLY=false />
         <ABILITY ID="Spell_ClanWard" PROFF=0 LEVEL=5 QUALIFYONLY=true />
-        <ABILITY ID="Spell_AwaitClanShip" PROFF=50 LEVEL=10 QUALIFYONLY=true />
         <ABILITY ID="Spell_ImprovedClanWard" PROFF=0 LEVEL=20 QUALIFYONLY=true />
     </ABILITIES>
     <EFFECTS>
@@ -1277,7 +1270,6 @@
         <ABILITY ID="Spell_CEqCold" PROFF=0 LEVEL=4 QUALIFYONLY=true />
         <ABILITY ID="Spell_ClanHome" PROFF=100 LEVEL=3 QUALIFYONLY=false />
         <ABILITY ID="Spell_ClanWard" PROFF=0 LEVEL=5 QUALIFYONLY=true />
-        <ABILITY ID="Spell_AwaitClanShip" PROFF=50 LEVEL=10 QUALIFYONLY=true />
         <ABILITY ID="Spell_ImprovedClanWard" PROFF=0 LEVEL=20 QUALIFYONLY=true />
     </ABILITIES>
     <EFFECTS>
@@ -1428,7 +1420,6 @@
         <ABILITY ID="Spell_CEqCold" PROFF=0 LEVEL=4 QUALIFYONLY=true />
         <ABILITY ID="Spell_ClanHome" PROFF=100 LEVEL=3 QUALIFYONLY=false />
         <ABILITY ID="Spell_ClanWard" PROFF=0 LEVEL=5 QUALIFYONLY=true />
-        <ABILITY ID="Spell_AwaitClanShip" PROFF=50 LEVEL=10 QUALIFYONLY=true />
         <ABILITY ID="Spell_ImprovedClanWard" PROFF=0 LEVEL=20 QUALIFYONLY=true />
     </ABILITIES>
     <EFFECTS>
@@ -1568,7 +1559,6 @@
         <ABILITY ID="Spell_CEqCold" PROFF=0 LEVEL=4 QUALIFYONLY=true />
         <ABILITY ID="Spell_ClanHome" PROFF=100 LEVEL=3 QUALIFYONLY=false />
         <ABILITY ID="Spell_ClanWard" PROFF=0 LEVEL=5 QUALIFYONLY=true />
-        <ABILITY ID="Spell_AwaitClanShip" PROFF=50 LEVEL=10 QUALIFYONLY=true />
         <ABILITY ID="Spell_ImprovedClanWard" PROFF=0 LEVEL=20 QUALIFYONLY=true />
     </ABILITIES>
     <EFFECTS>
