@@ -2121,12 +2121,19 @@ Makes an item explode when scrapped.
 
 PROP_SHORTEFFECTS=\
 Property   : Prop_ShortEffects\n\r\
-Targets    : MOB\n\r\
-Parameters : ([MAX TICKS];)([ABILITY MASK])\n\r\
-Example    : 3;+SKILLFLAG -DANCING -SINGING -PLAYING\n\r\
+Targets    : MOB, Item, Area, Room, etc\n\r\
+Parameters : ([MAX TICKS] (REMOTEOK) (LONGTIMEOK);)([ABILITY MASK])\n\r\
+Parameters : (... (OWNER) (WEARER)               ;)([ABILITY MASK])\n\r\
+Example    : 3 REMOTEOK;+SKILLFLAG -DANCING -SINGING -PLAYING\n\r\
 Description: \n\r\
 Makes the mob with this property more resiliant against effects by \
-limiting their tick-down time.  Useful for bosses and elite mobs.
+limiting their tick-down time, and preventing effects cast by \
+someone not in the same room.  Useful for bosses and elite mobs.  The \
+effects can be re-enabled with REMOTEOK or LONGTIMEOK.  An ability mask \
+can be given to limit what skills are affected by this property, although \
+traps, poisons, and diseases always get a pass from remote effects. If the \
+protected thing is an Item, OWNER and WEARER can limit the circumstances of \
+protection.
 
 PROP_SMELL=\
 Property   : Prop_Smell\n\r\
